# advent-of-code-2020

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
aoc/: day_01.py  day_02.py  day_03.py  day_04.py  day_three.py  day_two.py
tests/: conftest.py  test_aoc.py  test_day_01.json  test_day_01.py  test_day_02.json  test_day_02.py  test_day_03.json  test_day_03.py  test_day_04.py  test_day_one.py  test_day_three.py  test_day_two.py  test_resources.json
tests/fixtures/: 01.txt  02.txt  03.txt  04.txt  test_day_01.yaml  test_day_02.yaml  test_day_03.yaml  test_day_04.yaml
