[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = "Advent of Code is an Advent calendar of small programming puzzles."
authors = ["Rodolfo Puig <rodolfo@puig.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pyyaml = "^5.3.1"
black = "^20.8b1"
coverage = "^5.3"
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
isort = "^5.6.4"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
xdoctest = "^0.15.0"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
